--- a/public/admin.html
+++ b/public/admin.html
@@ -4,100 +4,195 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirePixCloud - 后台管理</title>
+    <link rel="stylesheet" href="/styles/main.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #e0f2fe, #dbeafe);
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+        }
+        
+        .admin-container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
+            animation: slideUp 0.5s ease-out;
         }
-        .admin-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+        h1 {
+            text-align: center;
+            margin-bottom: 2rem;
+            font-size: 1.8rem;
+            position: relative;
+            color: var(--text-primary);
         }
+
+        h1::after {
+            content: '';
+            display: block;
+            width: 50px;
+            height: 3px;
+            background: var(--primary-color);
+            margin: 0.5rem auto 0;
+            border-radius: 2px;
+        }
+
         .stats {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             margin-bottom: 30px;
         }
-        .stat-card {
-            background-color: #f8f9fa;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-        }
-        .stat-value {
-            font-size: 24px;
-            font-weight: bold;
-            color: #2196F3;
-            margin: 10px 0;
-        }
-        .files-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        .files-table th, .files-table td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        .files-table th {
-            background-color: #f8f9fa;
-            font-weight: 600;
-        }
-        .delete-btn {
-            background-color: #f44336;
-            color: white;
-            padding: 6px 12px;
-            border: none;
+
+        .file-code {
+            font-family: monospace;
+            background: rgba(1, 142, 238, 0.1);
+            padding: 4px 8px;
             border-radius: 4px;
-            cursor: pointer;
+            color: var(--primary-color);
+            font-weight: 500;
         }
-        .delete-btn:hover {
-            background-color: #d32f2f;
-        }
+
         .search-bar {
             margin-bottom: 20px;
         }
+
         .search-input {
             width: 100%;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 10px;
+            padding: 1rem;
+            border: 2px solid var(--border-color);
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            background: var(--background-color);
         }
-        .file-code {
-            font-family: monospace;
-            background-color: #f5f5f5;
-            padding: 2px 4px;
-            border-radius: 3px;
+
+        .search-input:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            background: white;
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
         }
+
+        .table-container {
+            background: white;
+            border-radius: 8px;
+            box-shadow: var(--shadow);
+            overflow: hidden;
+            margin: 1rem 0;
+        }
+
+        .files-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .files-table th {
+            background: var(--background-color);
+            padding: 1rem;
+            text-align: left;
+            font-weight: 600;
+            color: var(--text-primary);
+            border-bottom: 2px solid var(--border-color);
+        }
+
+        .files-table td {
+            padding: 1rem;
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        .files-table tr:hover td {
+            background: var(--background-color);
+        }
+
+        .delete-btn {
+            background-color: var(--danger-color);
+            color: white;
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .delete-btn:hover {
+            background-color: var(--danger-dark);
+            transform: translateY(-1px);
+        }
+
+        .delete-btn.loading {
+            position: relative;
+            color: transparent;
+        }
+
+        .delete-btn.loading::after {
+            content: '';
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            top: 50%;
+            left: 50%;
+            margin: -8px 0 0 -8px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top-color: white;
+            animation: spin 0.8s infinite linear;
+        }
+
         .pagination {
-            margin-top: 20px;
+            margin-top: 1.5rem;
             display: flex;
             justify-content: center;
-            gap: 10px;
+            gap: 0.5rem;
         }
+
         .page-btn {
-            padding: 5px 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: white;
+            padding: 0.5rem 1rem;
+            border: 2px solid var(--border-color);
+            border-radius: 6px;
+            background: white;
             cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: 500;
         }
+
+        .page-btn:hover {
+            background: var(--background-color);
+            transform: translateY(-1px);
+        }
+
         .page-btn.active {
-            background-color: #2196F3;
+            background: var(--primary-color);
             color: white;
-            border-color: #2196F3;
+            border-color: var(--primary-color);
         }
+
         .error {
-            color: #f44336;
-            margin: 10px 0;
+            animation: shake 0.5s ease-in-out;
+            text-align: center;
+            margin-top: 1rem;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
+        }
+
+        @media (max-width: 768px) {
+            .stats {
+                grid-template-columns: 1fr;
+            }
+            
+            .files-table {
+                display: block;
+                overflow-x: auto;
+            }
         }
     </style>
 </head>
@@ -290,6 +385,10 @@
         async function deleteFiles(extractCode) {
             if (!confirm('确定要删除这些文件吗？')) return;
 
+            const deleteBtn = document.querySelector(`button[onclick="deleteFiles('${extractCode}')"]`);
+            deleteBtn.disabled = true;
+            deleteBtn.classList.add('loading');
+
             try {
                 const sessionId = getSessionId();
                 const response = await fetch(`/session/${sessionId}/api/files/${extractCode}`, {
@@ -308,6 +407,9 @@
                 if (err.status === 403) {
                     window.location.href = '/login.html';
                 }
+            } finally {
+                deleteBtn.disabled = false;
+                deleteBtn.classList.remove('loading');
             }
         }
 
