--- a/public/index.html
+++ b/public/index.html
@@ -4,111 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirePixCloud - 文件上传</title>
+    <link rel="stylesheet" href="/styles/main.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .upload-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .drop-zone {
-            border: 2px dashed #ccc;
-            border-radius: 4px;
-            padding: 40px;
-            text-align: center;
-            margin: 20px 0;
-            background-color: #fafafa;
-            cursor: pointer;
-            transition: border-color 0.3s ease;
-        }
-        .drop-zone.dragover {
-            border-color: #4CAF50;
-            background-color: #E8F5E9;
-        }
-        .file-list {
-            margin: 20px 0;
-        }
-        .file-item {
-            padding: 8px;
-            background-color: #f8f9fa;
-            border-radius: 4px;
-            margin-bottom: 4px;
-        }
         .result {
             display: none;
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #E3F2FD;
-            border-radius: 4px;
+            margin-top: 1.25rem;
+            padding: 1.5rem;
+            background: linear-gradient(135deg, #e0f2fe, #dbeafe);
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow);
+            animation: slideUp 0.5s ease-out;
         }
-        .code-display {
-            font-family: monospace;
-            font-size: 1.2em;
-            margin: 10px 0;
-            padding: 8px;
-            background-color: white;
-            border-radius: 4px;
+        .result h3 {
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+            position: relative;
+        }
+        .result h3::after {
+            content: '';
+            display: block;
+            width: 50px;
+            height: 3px;
+            background: var(--primary-color);
+            margin: 0.5rem 0;
+            border-radius: 2px;
         }
         .qr-code {
-            margin: 20px 0;
+            margin: 1.5rem 0;
             text-align: center;
         }
         .qr-code img {
             max-width: 200px;
+            border-radius: 8px;
+            box-shadow: var(--shadow);
+            transition: transform 0.3s ease;
         }
-        .upload-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 1em;
+        .qr-code img:hover {
+            transform: scale(1.05);
         }
-        .upload-btn:disabled {
-            background-color: #cccccc;
-            cursor: not-allowed;
+        .code-display {
+            background: white;
+            padding: 1rem 1.5rem;
+            border-radius: 8px;
+            margin: 1rem 0;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        }
+        .file-item {
+            background: white;
+            padding: 1rem 1.5rem;
+            margin-bottom: 0.75rem;
+            border-radius: 8px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            transition: transform 0.2s ease;
+        }
+        .file-item:hover {
+            transform: translateX(5px);
         }
         .error {
-            color: #f44336;
-            margin: 10px 0;
+            animation: shake 0.5s ease-in-out;
+        }
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
         }
     </style>
 </head>
 <body>
-    <div class="upload-container">
+    <div class="container">
+        <div class="card">
         <h1>FirePixCloud 文件上传</h1>
         <div class="drop-zone" id="dropZone">
             <p>拖放文件到这里或点击选择文件</p>
+            <p>不支持中文文件名</p>
             <input type="file" id="fileInput" multiple style="display: none">
         </div>
         <div class="file-list" id="fileList"></div>
-        <button class="upload-btn" id="uploadBtn" disabled>上传文件</button>
+        <button class="btn btn-success btn-block" id="uploadBtn" disabled>上传文件</button>
         <div class="error" id="error"></div>
         <div class="result" id="result">
             <h3>上传成功！</h3>
             <p>请保存以下信息用于下载：</p>
             <div class="code-display">
-                提取码：<span id="extractCode"></span>
+                提取码：<strong><span id="extractCode"></span></strong>
             </div>
             <div class="code-display">
-                校验码：<span id="verifyCode"></span>
+                校验码：<strong><span id="verifyCode"></span></strong>
             </div>
             <div class="qr-code">
                 <p>扫描二维码下载：</p>
                 <img id="qrCode" alt="QR Code">
             </div>
             <p>
-                <a href="/download.html" target="_blank">前往下载页面</a>
+                <a href="/download.html" target="_blank" class="btn btn-primary">前往下载页面</a>
             </p>
-        </div>
+            </div>
+    </div>
     </div>
 
     <script>
@@ -178,6 +172,7 @@
         uploadBtn.addEventListener('click', async () => {
             error.textContent = '';
             uploadBtn.disabled = true;
+            uploadBtn.classList.add('loading');
             
             const formData = new FormData();
             files.forEach(file => {
@@ -212,6 +207,7 @@
             }
 
             uploadBtn.disabled = false;
+            uploadBtn.classList.remove('loading');
         });
     </script>
 </body>
