--- a/public/login.html
+++ b/public/login.html
@@ -4,93 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirePixCloud - 登录</title>
+    <link rel="stylesheet" href="/styles/main.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            background: linear-gradient(135deg, #e0f2fe, #dbeafe);
         }
         .login-container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 400px;
+            padding: 2.5rem;
+            animation: slideUp 0.5s ease-out;
         }
         h1 {
             text-align: center;
-            color: #333;
-            margin-bottom: 30px;
+            margin-bottom: 2rem;
+            font-size: 1.8rem;
+            position: relative;
+            color: var(--text-primary);
         }
-        .input-group {
-            margin-bottom: 20px;
-        }
-        .input-group label {
+        h1::after {
+            content: '';
             display: block;
-            margin-bottom: 5px;
-            color: #666;
-        }
-        .input-group input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-        .login-btn {
-            background-color: #2196F3;
-            color: white;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            width: 100%;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .login-btn:hover {
-            background-color: #1976D2;
-        }
-        .error {
-            color: #f44336;
-            margin: 10px 0;
-            text-align: center;
+            width: 50px;
+            height: 3px;
+            background: var(--primary-color);
+            margin: 0.5rem auto 0;
+            border-radius: 2px;
         }
         .type-select {
-            margin-bottom: 20px;
+            margin-bottom: 1.5rem;
+            display: flex;
+            justify-content: center;
+            gap: 1.5rem;
         }
         .type-select label {
-            margin-right: 20px;
             cursor: pointer;
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+            transition: all 0.3s ease;
+            color: var(--text-secondary);
+        }
+        .type-select label:hover {
+            background: rgba(1, 142, 238, 0.05);
         }
         .type-select input[type="radio"] {
-            margin-right: 5px;
+            margin-right: 0.5rem;
+            accent-color: var(--primary-color);
+        }
+        .type-select input[type="radio"]:checked + span {
+            color: var(--primary-color);
+            font-weight: 500;
+        }
+        .error {
+            text-align: center;
+            margin-top: 1rem;
+            animation: shake 0.5s ease-in-out;
+        }
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
+    <div class="login-container card">
         <h1>FirePixCloud</h1>
         <div class="type-select">
             <label>
-                <input type="radio" name="loginType" value="upload" checked> 文件上传
+                <input type="radio" name="loginType" value="upload" checked>
+                <span>文件上传</span>
             </label>
             <label>
-                <input type="radio" name="loginType" value="admin"> 后台管理
+                <input type="radio" name="loginType" value="admin">
+                <span>后台管理</span>
             </label>
         </div>
         <div class="input-group">
             <label for="password">请输入密码</label>
-            <input type="password" id="password" placeholder="请输入访问密码">
+            <input type="password" id="password" placeholder="请输入访问密码" class="input-control">
         </div>
-        <button class="login-btn" id="loginBtn">登录</button>
+        <button class="btn btn-primary btn-block" id="loginBtn">登录</button>
         <div class="error" id="error"></div>
     </div>
 
@@ -108,6 +116,9 @@
                 error.textContent = '请输入密码';
                 return;
             }
+
+            loginBtn.disabled = true;
+            loginBtn.classList.add('loading');
 
             try {
                 const response = await fetch('/login', {
@@ -130,6 +141,9 @@
             } catch (err) {
                 error.textContent = '登录过程中发生错误';
                 console.error('Login error:', err);
+            } finally {
+                loginBtn.disabled = false;
+                loginBtn.classList.remove('loading');
             }
         });
 
