--- a/public/login.html
+++ b/public/login.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirePixCloud - 登录</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/public/styles/main.css">
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #e0f2fe, #dbeafe);
-        }
         .login-container {
             width: 100%;
             max-width: 400px;
